# KeyaSoftbox

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  KSB.code-workspace  Kconfig  README.md  prj.conf  west.yml
Hardware/: BOM_KeyaSoftbox_2025-09-14.csv  PickAndPlace_PCB_KeyaSoftbox_2025-09-14.csv
Housing/: Body.stl  BodySmall60%size.stl  Diffusor.stl  KSB_BatLid.stl  KSB_Body.stl  KSB_LED_Holder.stl  KSB_Top.stl  Ledholder.stl
SoftboxSketch/: SoftboxSketch.ino
boards /: esp32s3_devkitm.overlay  native_sim.conf  native_sim.overlay
boards/esp32s3_devkitm/esp32s3/: procpu.overlay
include/: version.h.in
src/: gatt_service.c  keyasoftbox.h  ksb_common.h  led_control.c  led_control.h  led_effects.c  main.c  mesh_handler.c  mesh_network.c  mesh_network.h  nvs_storage.c  nvs_storage.h  state_machine.c  state_machine.h  version.h  web_config.c  web_config.h
ws2812/: ws2812_driver.c  ws2812_driver.h
